--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,7 @@
 name: storm_lang
-description: A simple command-line application.
-version: 1.0.0
-# homepage: https://www.example.com
+description: A programing language entry to repl.it's programming challenge
+version: 0.0.1
+homepage: https://github.com/HarryET/stormlang
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-
-# dependencies:
-#   path: ^1.8.0
-
-dev_dependencies:
-  lints: ^1.0.0
+  sdk: '>=2.6.0 <3.0.0'
