--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,4 +4,8 @@ version: 0.0.1
 homepage: https://github.com/HarryET/stormlang
 
 environment:
-  sdk: '>=2.6.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
+
+dependencies:
+  args: ^2.1.1
+  console: ^4.1.0
